added security layer and auth redirects, fixed some styling
